# solid-giggle

./: Cargo.toml  README.md
src/: abbrev_name.rs  add_word.rs  address_book.rs  all_inclusive.rs  all_unique.rs  alphabet_add.rs  alphabet_symmetry.rs  alternate_capitalize.rs  alternate_case.rs  apparently_modify_string.rs  are_they_same.rs  area_perimeter.rs  array_diff.rs  array_element_parity.rs  array_leader.rs  ball_upwards.rs  basic_sequence_practice.rs  benefactor.rs  billards_triangle.rs  bit_count.rs  blue_red_marble.rs  bugs_life.rs  buy_car.rs  calc_str_rotate.rs  camel_case.rs  cannon_ready.rs  catalog.rs  categorize_new_member.rs  char_freq.rs  closest_ten.rs  cnt_pos_sum_neg.rs  compose_square_string.rs  consecutive_needed.rs  coordinates_validation.rs  correct_time_string.rs  count_digit.rs  count_divisors.rs  count_ip.rs  count_salute.rs  count_sheep.rs  (+154 more)
test/: address_book.txt  book0.csv  report0.txt
test/address_book/: init.sql
